nuevo comentario en index

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
           target="_blank">Escríbeme!</a>
       </div>
   </section>
+  <!-- Footer -->
   <footer class="bg-light text-center text-dark p-2">
     <a href="https://twitter.com" data-toggle="tooltip" data-placement="left" title="@Aldo_jc"><i class="text-dark fab fa-twitter-square mx-2 fa-3x"></i></a>
     <a href="https://instagram.com" data-toggle="tooltip" data-placement="top" title="@volatildemente"><i class="text-dark fab fa-instagram mx-2 fa-3x"></i></a>
