--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="card-deck">
                   <div class="row">
                     <div class="card col-sm-12 col-md-4">
-                      <img src="assets/img/oliviaRos.png" class="card-img-top" alt="oliviaros">
+                      <img src="assets/img/OliviaRos.png" class="card-img-top" alt="oliviaros">
                       <div class="card-body">
                         <h5 class="card-title">Olivia Ros</h5>
                         <p class="card-text">Proyecto Freelancer</p>
